Bug tracker at http://code.google.com/p/psutil/issues

0.6.2 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue 328: (Windows) process IO nice/priority support.

BUG FIXES

 * Issue 313: (Linux) psutil.virtual_memory() and psutil.swap_memory() can crash
   on certain exotic Linux flavors having an incomplete /proc interface.
   If that's the case we now set the unretrievable stats to 0 and raise a
   RuntimeWarning.
 * Issue 319: (Linux) process get_memory_maps() raises KeyError 'Anonymous' on
   Debian squeeze.
 * Issue 333: (OS X) Leak of Mach ports on OS X (patch by rsesek@google.com)
 * Issue 337: (Linux) process methods not working because of a poor /proc
   implementation will raise NotImplementedError rather than RuntimeError and
   Process.as_dict() will not blow up.  (patch by Curtin1060)
 * Issue 339: (FreeBSD) get_pid_list() can allocate all the memory on system.
 * Issue 341: (Linux) psutil might crash on import due to error in retrieving
   system terminals map.
 * Issue 344: (FreeBSD) swap_memory() might return incorrect results due to
   kvm_open(3) not being called. (patch by Jean Sebastien)


0.6.1 - 2012-08-16
------------------

NEW FEATURES

 * Issue 316: process cmdline property now makes a better job at guessing the
   process executable from the cmdline.

BUG FIXES

 * Issue 316: process exe was resolved in case it was a symlink.
 * Issue 318: python 2.4 compatibility was broken.

API CHANGES

 * process exe can now return an empty string instead of raising AccessDenied.
 * process exe is no longer resolved in case it's a symlink.


0.6.0 - 2012-08-13
------------------

NEW FEATURES

 * Issue 216: (UNIX) get_connections() UNIX sockets support.
 * Issue 220: (BSD) get_connections() has been rewritten in C and no longer
   requires lsof.
 * Issue 222: (OSX) add support for process cwd.
 * Issue 261: process extended memory info.
 * Issue 295: (OSX) process executable path is now determined by asking the OS